force-app/main/default/objects/Position__c/fields/Hiring_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hiring Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.isHiringManager__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>