force-app/main/default/objects/Position__c/fields/Num_Days_til_Due__c.field-meta.xml
<CustomField>
    <fullName>Num_Days_til_Due__c</fullName>
    <formula>Due_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num Days til Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>