force-app/main/default/objects/Position__c/fields/Num_of_Applications__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Applications__c</fullName>
    <label>Num of Applications</label>
    <summaryForeignKey>Application__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>