force-app/main/default/objects/Position__c/fields/Num_of_Interviewers__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Interviewers__c</fullName>
    <label>Num of Interviewers</label>
    <summaryForeignKey>Interviewer__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>