force-app/main/default/objects/Position__c/fields/Urgency__c.field-meta.xml
<CustomField>
    <fullName>Urgency__c</fullName>
    <formula>IMAGE(
	IF(Num_Days_til_Due__c&lt;14, &quot;/img/samples/flag_red.gif&quot;,
		IF(Num_Days_til_Due__c &lt; 30, &quot;/img/samples/flag_yellow.gif&quot;,
		&quot;/img/samples/flag_green.gif&quot;)
	)
	, &quot;No&quot;
)</formula>
    <label>Urgency</label>
    <type>Text</type>
</CustomField>