force-app/main/default/objects/Position__c/validationRules/Description_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Required</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Description__c ) == 0 &amp;&amp; TEXT( Status__c ) == &quot;Open&quot;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You must enter a Description before opening a position.</errorMessage>
</ValidationRule>